--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.3.1",
     "@types/bootstrap": "^4.1.2",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.4",
+    "ngx-pagination": "^3.2.1",
+    "ngx-spinner": "^6.1.2",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
@@ -35,7 +36,6 @@
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.3.22",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
